[gd_scene load_steps=7 format=3 uid="uid://dy5vyatq360dc"]

[ext_resource type="Script" path="res://script/pause_menu.gd" id="1_dqwoy"]

[sub_resource type="Gradient" id="Gradient_i6a7i"]
colors = PackedColorArray(0.172549, 0.172549, 0.196078, 0.588235, 0.235294, 0.235294, 0.258824, 0.588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j8chm"]
gradient = SubResource("Gradient_i6a7i")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Theme" id="Theme_fbqb7"]

[sub_resource type="InputEventKey" id="InputEventKey_vbos2"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_7r2bv"]
events = [SubResource("InputEventKey_vbos2")]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_dqwoy")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_j8chm")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -33.0
offset_right = 94.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="resume_button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fbqb7")
shortcut = SubResource("Shortcut_7r2bv")
shortcut_in_tooltip = false
text = "voltar ao jogo"

[node name="quit_to_menu_button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "sair para o menu inicial"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 512.0
offset_top = 207.0
offset_right = 638.0
offset_bottom = 247.0
theme_override_font_sizes/font_size = 30
text = "PAUSADO"

[connection signal="pressed" from="Control/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/quit_to_menu_button" to="." method="_on_quit_to_menu_button_pressed"]
